# clux

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/commands/: build.md  ci.md  done.md  lint.md  pr.md  resume.md  start.md  status.md  test.md
.claude/skills/rust-dev-workflow/: SKILL.md
.github/workflows/: ci.yml
crates/clux/: Cargo.toml
crates/clux-coord/: Cargo.toml
crates/clux-coord/src/: broker.rs  detect.rs  error.rs  lib.rs  mcp_bridge.rs  panel.rs  peer.rs  protocol.rs
crates/clux-layout/: Cargo.toml
crates/clux-layout/src/: constraints.rs  lib.rs  pane.rs  tab.rs  tree.rs
crates/clux-renderer/: Cargo.toml
crates/clux-renderer/src/: atlas.rs  border.rs  box_drawing.rs  cell_renderer.rs  lib.rs  pipeline.rs
crates/clux-session/: Cargo.toml
crates/clux-session/src/: auto_save.rs  error.rs  lib.rs  restore.rs  state.rs  store.rs
crates/clux-terminal/: Cargo.toml
crates/clux-terminal/src/: buffer.rs  conpty.rs  input.rs  lib.rs  resize.rs  terminal_size.rs  vt_parser.rs
crates/clux/src/: app.rs  config.rs  main.rs  selection.rs
docs/: ARCHITECTURE.md
resources/: default_config.toml
resources/shaders/: cell.wgsl
scripts/: pre-commit
wix/: License.rtf  main.wxs
