[package]
name = "clux-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
windows.workspace = true
vte.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
winit.workspace = true
unicode-width.workspace = true
