[package]
name = "clux"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "clux"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clux-terminal = { path = "../clux-terminal" }
clux-renderer = { path = "../clux-renderer" }
clux-layout = { path = "../clux-layout" }
clux-session = { path = "../clux-session" }

winit.workspace = true
wgpu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
pollster.workspace = true
serde_json.workspace = true
vte = { workspace = true }
