[package]
name = "clux"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "clux"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clux-terminal = { path = "../clux-terminal" }
clux-renderer = { path = "../clux-renderer" }
clux-layout = { path = "../clux-layout" }
clux-session = { path = "../clux-session" }
clux-coord = { path = "../clux-coord" }
tokio.workspace = true

winit.workspace = true
wgpu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
pollster.workspace = true
serde_json.workspace = true
vte = { workspace = true }
serde.workspace = true
toml.workspace = true
dirs.workspace = true
arboard.workspace = true
